# tiramisu

./: .gitmodules  CMakeLists.txt  Makefile  dist_notes.txt  dist_test.sh  gemv.sh  install_jess_config.sh  run_cvtcolor_dist.sh  run_cvtcolor_kitchen_sink.sh  run_dblur.sh  run_dblurxy_dist.sh  run_dblurxy_dist_data.sh  run_filter2D_dist.sh  run_fusion_dist.sh  run_gaussian_dist.sh  run_sobel_dist.sh  run_warp_affine_dist.sh  single_cpu_blur.sh  single_gpu_blur.sh  t_blur_sizes.h
blur/: blur.cpp  blur.h  machine_list  nike8.machine_list  nike8.rank_file  wrapper_blur.cpp  wrapper_blur.h
distributed/: #blur_params.h#  blur.cpp  blur_100x10_results.txt  blur_params.h  blur_rankfile_1node  blur_rankfile_2nodes  blur_rankfile_3nodes  gemv.cpp  gemv_params.h  wrapper_blur.cpp  wrapper_blur.h  wrapper_gemv.cpp  wrapper_gemv.h
distributed_tests/: blurxy.cpp  cvtcolor_dist.cpp  cvtcolor_gpu_dist.cpp  dblurxy.cpp  dblurxy_dist.cpp  dblurxy_dist_data.cpp  dtest_01.cpp  dtest_02.cpp  dtest_02_new.cpp  dtest_03.cpp  dtest_04.cpp  dtest_05.cpp  filter2D_dist.cpp  fusion_dist.cpp  gaussian_dist.cpp  sizes.h  sobel_dist.cpp  tester.cpp  warp_affine_dist.cpp  wrapper_cvtcolor_dist.cpp  wrapper_cvtcolor_dist.h  wrapper_cvtcolor_gpu_dist.cpp  wrapper_cvtcolor_gpu_dist.h  wrapper_cvtcolor_kitchen_sink.cpp  wrapper_cvtcolor_kitchen_sink.h  wrapper_dblurxy.cpp  wrapper_dblurxy.h  wrapper_dblurxy_dist.cpp  wrapper_dblurxy_dist.h  wrapper_dblurxy_dist_data.cpp  wrapper_dblurxy_dist_data.h  wrapper_dtest_01.cpp  wrapper_dtest_01.h  wrapper_dtest_02.cpp  wrapper_dtest_02.h  wrapper_dtest_03.cpp  wrapper_dtest_03.h  wrapper_dtest_04.cpp  wrapper_dtest_05.cpp  wrapper_dtest_05.h  (+10 more)
distributed_tests.old/: dtest_01.cpp  dtest_02.cpp  dtest_03.cpp  dtest_05.cpp  wrapper_dtest_01.h  wrapper_dtest_02.h  wrapper_dtest_04.h
gemv/: gemv.cpp  gemv.h  tiramisu_CUDA_kernel_gemv.cu  wrapper_gemv.cpp  wrapper_gemv.h
include/tiramisu/: core.h  debug.h  expr.h  tiramisu_cuda.h  tiramisu_cuda_runtime.h  tiramisu_mpi.h  type.h  utils.h
others/: Makefile  bench_blur.sh  blurxy_ref.cpp  dist_test.sh  wrapper_blurxy.cpp
rank_files/: rank_file_exp_0.txt  rank_file_exp_1.txt  rank_file_exp_10.txt  rank_file_exp_11.txt  rank_file_exp_12.txt  rank_file_exp_13.txt  rank_file_exp_2.txt  rank_file_exp_3.txt  rank_file_exp_4.txt  rank_file_exp_5.txt  rank_file_exp_6.txt  rank_file_exp_7.txt  rank_file_exp_8.txt  rank_file_exp_9.txt  rank_file_full
src/: tiramisu_codegen_cuda.cpp  tiramisu_codegen_halide.cpp  tiramisu_codegen_halide_lowering.cpp  tiramisu_core.cpp  tiramisu_cuda.cpp  tiramisu_cuda.cu  tiramisu_mpi.cpp
utils/: compile_cuda_files.sh
